Fix minor header and home layout problems

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -101,9 +101,15 @@
   padding-bottom: 1rem;
 }
 
-
-
 /* Home */
+
+/* Incluindo espaçamento do texto header*/
+
+.flexColChild--home{
+  margin: 10px 0 0 100px;
+  font-size: 8.3vw;
+  font-family: Circular Std Book, sans-serif;
+}
 
 .flexRowContent--stats-container {
   margin-left: 1rem;
